# MrX

./: .gitignore  LICENSE  README.md  SCHEDULE.md  mrx-protocol.txt  protocol.txt
code/: pyproject.toml
code/src/mrx/: __init__.py
code/src/mrx/communication/: client.py  common.py  gps_provider.py  keygen.py  protocol.py  server.py
code/src/mrx/database/: create_user_db.py  user_db.py  user_db_test.py
code/src/mrx/gui/: client_stub.py  data.json  enums.py  gui.py  login.html  main.html  map.html  model.py  signup.html  style.css  types.py
code/src/mrx/logic/: geometry.py  locationStateHandler.py  protocol.py  quadtree.py
code/src/mrx/server/: pending_request_db.py  pending_request_store.py  permission_db.py  permission_store.py  server.py  server_impl.py  spacial_db.py  spacial_store.py
code/src/mrx/server_client_stuff/: client.py  common.py
user_db/: create_user_db.py  user.db  user_db_test.py
