[project]
name = "mrx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Alexander Marggraf", email = "a.marggraf@unibas.ch" },
    { name = "Max Reintert", email = "max.reinert@unibas.ch" },
    { name = "Pascal von Fellenberg", email = "pvonfellenberg@bluewin.ch" }
]
requires-python = ">=3.13"
dependencies = [
    "folium>=0.20.0",
    "pywebview>=6.2.1",
    "zxcvbn>=4.5.0",
]

[project.scripts]
mrx = "mrx:main"
server = "mrx:server_main"
client = "mrx:client_main"
create_db = "mrx:create_db_main"
test_db = "mrx:test_db_main"
gui = "mrx:gui_main"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"
